# exploration-orchestrator

./: Cargo.toml  README.md  adon1l9tmauom6ghnkpnltmqb3kdlnvb  iqvmpieelpkojcql3v10inar6cjbgfcj  itn9oeooehsi5nedp8e2hkmlfvgvhski.darc  manifest
.agents/plans/phase4-requsts/: 00-index.md  01-generated-inputsynth-adapter.md  02-dto-wire-contract-goldens.md  03-bringup-seeds-fingerprints.md  04-node-attrs-context.md  05-smoke-validation-handoff.md
.agents/plans/phase5-entry-m3-m4-runner-on-fakes/: 00-plan.md  01-decisions.md  02-m3.md  03-m4.md  04-verification.md
.agents/plans/phase5-m5-hardening-on-fakes/: 00-plan.md  01-decisions.md  02-config-validation.md  03-metrics.md  04-cas-ownership.md  05-soak-and-runbook.md  06-verification.md
.agents/plans/phase5-m5-review-followups/: 00-plan.md
.agents/plans/phase5-prep-proto-upstream-and-tier2-chaos/: 00-plan.md  01-decisions.md  02-proto-upstream.md  03-tier2-chaos.md  04-verification.md
.agents/requests/phase5-entry-m3-m4-runner-on-fakes/: 00-overview.md  01-current-state.md  02-milestones-m3-m4.md  03-verification-offer.md  04-resolution.md
.agents/requests/phase5-m5-hardening-on-fakes/: 00-overview.md  01-current-state.md  02-requested-work.md  03-verification-offer.md  04-resolution.md  05-leftovers-triage-note.md
.agents/requests/phase5-observatory-event-contract-conformance/: 00-overview.md  01-current-state.md  02-requested-work.md  03-verification-offer.md
.agents/requests/phase5-prep-proto-upstream-and-tier2-chaos/: 00-overview.md  01-current-state.md  02-requested-work.md  03-verification-offer.md  04-resolution.md
.beads/: metadata.json
.github/workflows/: ci.yaml
bins/orchestratord/: Cargo.toml
bins/orchestratord/examples/: corridor-ladder.yaml  grid-smoke.yaml
bins/orchestratord/src/: main.rs  simulate.rs
bins/orchestratord/tests/: http_metrics.rs  tier2_chaos.rs
crates/orch-checkpoint/: Cargo.toml
crates/orch-checkpoint/src/: lib.rs
crates/orch-clients/: Cargo.toml
crates/orch-clients/src/: hypervisor.rs  input_synth.rs  lib.rs  observatory.rs  scorer.rs  snapshot_store.rs
crates/orch-core/: Cargo.toml
crates/orch-core/src/: commit.rs  compile.rs  config_rejections.rs  frontier.rs  lib.rs  mirror.rs  plateau.rs  policy.rs  rng.rs  runtime_reasons.rs  tree.rs  types.rs
crates/orch-core/src/policy/: mod.rs  softmax.rs  staged.rs  ucb.rs
crates/orch-core/tests/: config_matrix.rs  core_validation.rs  purity_guard.rs  runtime_reasons.rs
crates/orch-driver/: Cargo.toml
crates/orch-driver/src/: input_synth.rs  lib.rs  node_attrs.rs
crates/orch-driver/src/input_synth/: grpc.rs
crates/orch-driver/tests/: input_synth_context.rs  input_synth_wire.rs
crates/orch-fakes/: Cargo.toml
crates/orch-fakes/src/: fault.rs  grid.rs  hypervisor.rs  lib.rs  observatory.rs  scorer.rs  snapshot_store.rs  synth.rs  transcript.rs
crates/orch-fakes/tests/: contracts.rs  search_loop.rs
crates/orch-proto/: Cargo.toml  build.rs
crates/orch-proto/protos/determinism/orchestrator/v1/: orchestrator.proto
crates/orch-proto/src/: lib.rs
crates/orch-sched/: Cargo.toml
crates/orch-sched/src/: driver.rs  lib.rs  metrics.rs  pipeline.rs  ports.rs  retry.rs  slots.rs
crates/orch-sched/tests/: backpressure.rs  expansion_context.rs  retry_equivalence.rs  shrink_grow.rs  utilization.rs
crates/orch-sched/tests/support/: mod.rs
crates/orch-server/: Cargo.toml
crates/orch-server/src/: bringup.rs  config.rs  events.rs  experiment.rs  lib.rs  metrics.rs  service.rs
crates/orch-server/tests/: autonomy.rs  cas_ownership_loss.rs  chaos_resume.rs  config_validation_surface.rs  fast_replay.rs  grpc_surface.rs  m5_soak.rs  metrics_surface.rs  pause_resume.rs  plateau_ladder.rs  runner_smoke.rs  seed_gate.rs
crates/orch-server/tests/support/: mod.rs
crates/orch-simstate/: Cargo.toml
crates/orch-simstate/src/: compare.rs  journal.rs  lib.rs  records.rs  world.rs
crates/orch-simstate/tests/: world_reload.rs
docs/: config-validation-rejections.md  runtime-terminal-reasons.md
evidence/phase5-m3-m4/: chaos.txt  m3-acceptance.txt  m4-acceptance.txt  run-manifest.md  seed-gate.txt
evidence/phase5-m5-hardening/: cas-ownership.txt  config-validation.txt  failed-reason-census-smoke.txt  failed-reason-census.txt  metrics-diff.txt  run-manifest-smoke.md  run-manifest.md  soak-24h.txt  soak-smoke.txt
evidence/phase5-tier2-chaos/: negative-control.txt  run-manifest.md  tier2-chaos.txt
scripts/: evidence-m3m4.sh  evidence-m5-cas-ownership.sh  evidence-m5-config-validation.sh  evidence-m5-metrics.sh  evidence-m5-soak.sh  evidence-tier2.sh
