[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"

[workspace.dependencies]
blake3 = { version = "1.5", default-features = false, features = ["pure"] }
determinism-proto = { path = "../control-plane/crates/determinism-proto", default-features = false }
hashbrown = { version = "0.15", default-features = false, features = ["allocator-api2", "equivalent", "serde"] }
libm = "0.2"
postcard = { version = "1.1", default-features = false, features = ["alloc"] }
proptest = { version = "1.6", default-features = false, features = ["std", "bit-set"] }
rand_chacha = { version = "0.3", default-features = false }
rand_core = { version = "0.6", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
