[package]
name = "orch-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
blake3.workspace = true
hashbrown.workspace = true
libm.workspace = true
postcard.workspace = true
rand_chacha.workspace = true
rand_core.workspace = true
serde.workspace = true

[dev-dependencies]
proptest.workspace = true
