[package]
name = "orch-proto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
determinism-proto = { workspace = true, features = ["orchestrator", "inputsynth"] }
prost = "0.14"
prost-types = "0.14"
tonic = { workspace = true }
tonic-prost = "0.14"

[build-dependencies]
prost-build = "0.14"
protoc-bin-vendored = "3.2.0"
tonic-prost-build = "0.14"
