[package]
name = "orch-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
blake3.workspace = true
orch-checkpoint = { path = "../orch-checkpoint" }
orch-clients = { path = "../orch-clients" }
orch-core = { path = "../orch-core" }
# Transport-free pieces only (request builders, fingerprint guard, node
# attrs); the `grpc` feature stays off.
orch-driver = { path = "../orch-driver" }
orch-sched = { path = "../orch-sched" }
postcard.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["sync", "macros"] }

[dev-dependencies]
orch-fakes = { path = "../orch-fakes" }
proptest.workspace = true
tokio = { workspace = true, features = ["sync", "macros", "test-util"] }
