[package]
name = "orch-simstate"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
blake3.workspace = true
orch-clients = { path = "../orch-clients" }
orch-core = { path = "../orch-core" }
orch-driver = { path = "../orch-driver" }
orch-fakes = { path = "../orch-fakes" }
orch-sched = { path = "../orch-sched" }
postcard.workspace = true
serde.workspace = true

[dev-dependencies]
tempfile = "3"
